@@ -20,6 +20,7 @@ This release includes the following bugfixes:
 
  o Fixed curl-config --ca
  o Fixed the multi interface connection re-use with NSS-built libcurl
+ o connection re-use when using the multi interface with pipelining enabled
 
 This release includes the following known bugs:
 
@@ -37,6 +38,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Lenny Rachitsky, Axel Tillequin, Arnaud Ebalard, Yang Tse, Dan Fandrich,
- Rob Crittenden
+ Rob Crittenden, Dengminwen
 
         Thanks! (and sorry if I forgot to mention someone)
