@@ -6,6 +6,12 @@
 
                                   Changelog
 
+Daniel Stenberg (19 Jun 2008)
+- Dengminwen found a bug in the connection re-use function when using the
+  multi interface with pipelining enabled as it would wrongly check for,
+  detect and close "dead connections" even though that connection was already
+  in use!
+
 Daniel Fandrich (18 Jun 2008)
 - Added SSH failure test cases 628-632
 
